--- a/.env
+++ b/.env
@@ -40,5 +40,8 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
+WX_APP_ID=wxdd0d451ebdddd4f9
+WX_APP_SECRET=3a0980e46f62a1f9b759fa11adaab484
+
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
