--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=192.168.28.129
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=item
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=123456abc
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
